example code overflow issue fixed

--- a/apps/style.css
+++ b/apps/style.css
@@ -78,9 +78,9 @@
 }
 
 .astro-code {
-  @apply overflow-hidden bg-muted! text-sm p-4 rounded-lg;
+  @apply overflow-y-hidden !bg-muted text-sm p-4 rounded-lg;
   .shiki {
-    @apply bg-transparent!;
+    @apply !bg-transparent;
   }
 }
 
